--- a/assets/package.json
+++ b/assets/package.json
@@ -7,18 +7,62 @@
   },
   "dependencies": {
     "phoenix": "file:../deps/phoenix",
-    "phoenix_html": "file:../deps/phoenix_html"
+    "phoenix_html": "file:../deps/phoenix_html",
+    "@fortawesome/fontawesome-free": "^5.11.1",
+    "axios": "^0.19.0",
+    "chart.js": "^2.8.0",
+    "cordova-android": "^8.1.0",
+    "cordova-browser": "^6.0.0",
+    "fastclick": "^1.0.6",
+    "framework7": "^4.5.1",
+    "framework7-icons": "^2.3.1",
+    "framework7-vue": "^4.5.1",
+    "loglevel": "^1.6.4",
+    "material-design-icons": "^3.0.1",
+    "vue": "^2.6.10",
+    "vue-axios": "^2.1.5",
+    "vue-chartjs": "^3.4.2",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
-    "babel-loader": "^8.0.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "cheerio": "^1.0.0-rc.3",
+    "chokidar": "^3.1.1",
+    "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^4.5.0",
-    "css-loader": "^2.1.1",
+    "cordova-plugin-whitelist": "^1.3.4",
+    "css-loader": "^3.2.0",
+    "current-device": "^0.8.2",
+    "epipebomb": "^1.0.0",
+    "extract-text-webpack-plugin": "4.0.0-beta.0",
+    "file-loader": "^4.2.0",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.0",
+    "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^4.0.0",
+    "path": "^0.12.7",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^1.0.0",
+    "svg-url-loader": "^3.0.2",
+    "terser-webpack-plugin": "^2.1.0",
     "uglifyjs-webpack-plugin": "^1.2.4",
+    "url-loader": "^2.1.0",
+    "vue-hot-reload-api": "^2.3.4",
+    "vue-html-loader": "^1.2.4",
+    "vue-loader": "^15.7.1",
+    "vue-style-loader": "^4.1.2",
+    "vue-template-compiler": "^2.6.10",
     "webpack": "4.4.0",
-    "webpack-cli": "^2.0.10"
+    "webpack-cli": "^2.0.10",
+    "webpack-dev-server": "^3.8.1",
+    "webpack-merge": "^4.2.2"
   }
 }
