--- a/assets/.babelrc
+++ b/assets/.babelrc
@@ -1,5 +1,10 @@
 {
-    "presets": [
-        "@babel/preset-env"
-    ]
+  "presets": [
+    ["@babel/preset-env", {
+      "modules": false,
+      "targets": {
+          "browsers": ["> 1%", "last 2 versions", "not ie <= 8"]
+      }
+    }]
+  ]
 }
