--- a/assets/package.json
+++ b/assets/package.json
@@ -6,10 +6,10 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
-    "phoenix": "file:../deps/phoenix",
-    "phoenix_html": "file:../deps/phoenix_html",
     "@fortawesome/fontawesome-free": "^5.11.1",
     "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.1.0",
     "chart.js": "^2.8.0",
     "cordova-android": "^8.1.0",
     "cordova-browser": "^6.0.0",
@@ -19,6 +19,8 @@
     "framework7-vue": "^4.5.1",
     "loglevel": "^1.6.4",
     "material-design-icons": "^3.0.1",
+    "phoenix": "file:../deps/phoenix",
+    "phoenix_html": "file:../deps/phoenix_html",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
     "vue-chartjs": "^3.4.2",
