--- a/assets/package.json
+++ b/assets/package.json
@@ -17,6 +17,7 @@
     "framework7": "^4.5.1",
     "framework7-icons": "^2.3.1",
     "framework7-vue": "^4.5.1",
+    "jquery": "^3.4.1",
     "loglevel": "^1.6.4",
     "material-design-icons": "^3.0.1",
     "phoenix": "file:../deps/phoenix",
