--- a/assets/package.json
+++ b/assets/package.json
@@ -3,7 +3,8 @@
   "license": "MIT",
   "scripts": {
     "deploy": "webpack -p",
-    "watch": "webpack --mode development --watch"
+    "watch": "webpack --mode development --watch",
+    "bot": "nodemon bot"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.11.1",
@@ -13,6 +14,7 @@
     "chart.js": "^2.8.0",
     "cordova-android": "^8.1.0",
     "cordova-browser": "^6.0.0",
+    "express": "^4.17.1",
     "fastclick": "^1.0.6",
     "framework7": "^4.5.1",
     "framework7-icons": "^2.3.1",
@@ -20,6 +22,7 @@
     "jquery": "^3.4.1",
     "loglevel": "^1.6.4",
     "material-design-icons": "^3.0.1",
+    "nodemon": "^2.0.1",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
     "vue": "^2.6.10",
