--- a/assets/package.json
+++ b/assets/package.json
@@ -20,13 +20,16 @@
     "framework7-icons": "^2.3.1",
     "framework7-vue": "^4.5.1",
     "jquery": "^3.4.1",
+    "localtunnel": "^2.0.0",
     "loglevel": "^1.6.4",
     "material-design-icons": "^3.0.1",
+    "node-tunnel": "^4.0.0",
     "nodemon": "^2.0.1",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
+    "telegraf": "^3.35.0",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
     "vue-chartjs": "^3.4.2",
