--- a/assets/package.json
+++ b/assets/package.json
@@ -32,6 +32,12 @@
     "socket.io-client": "^2.3.0",
     "telegraf": "^3.35.0",
     "vue": "^2.6.10",
+    "apexcharts": "^3.15.2",
+    "britecharts": "^2.13.2",
+    "chartjs-plugin-crosshair": "^1.1.4",
+    "chartjs-plugin-datalabels": "^0.7.0",
+    "chartjs-plugin-zoom": "^0.7.5",
+    "vuejs-datepicker": "^1.6.2",
     "vue-axios": "^2.1.5",
     "vue-chartjs": "^3.4.2",
     "vuex": "^3.1.1"
