--- a/assets/package.json
+++ b/assets/package.json
@@ -33,6 +33,7 @@
     "telegraf": "^3.35.0",
     "vue": "^2.6.10",
     "apexcharts": "^3.15.2",
+    "vue-apexcharts": "^1.5.2",
     "britecharts": "^2.13.2",
     "chartjs-plugin-crosshair": "^1.1.4",
     "chartjs-plugin-datalabels": "^0.7.0",
