--- a/assets/package.json
+++ b/assets/package.json
@@ -39,6 +39,7 @@
     "chartjs-plugin-datalabels": "^0.7.0",
     "chartjs-plugin-zoom": "^0.7.5",
     "vuejs-datepicker": "^1.6.2",
+    "vue-spinner": "^1.0.3",
     "vue-axios": "^2.1.5",
     "vue-chartjs": "^3.4.2",
     "vuex": "^3.1.1"
