--- a/assets/package.json
+++ b/assets/package.json
@@ -50,9 +50,12 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-regenerator": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "cheerio": "^1.0.0-rc.3",
     "chokidar": "^3.1.1",
     "clean-webpack-plugin": "^3.0.0",
