--- a/assets/.babelrc
+++ b/assets/.babelrc
@@ -5,7 +5,7 @@
       "targets": {
           "browsers": ["> 1%", "last 2 versions", "not ie <= 8"]
       }
-    }]
+    }],["vue"]
   ],
   "plugins": ["@babel/plugin-transform-runtime"]
 }
