--- a/assets/package.json
+++ b/assets/package.json
@@ -97,6 +97,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "babel-preset-vue": "^2.0.2",
     "cheerio": "^1.0.0-rc.3",
     "chokidar": "^3.3.1",
     "clean-webpack-plugin": "^3.0.0",
