--- a/assets/package.json
+++ b/assets/package.json
@@ -60,6 +60,7 @@
     "vue-fullcalendar": "^1.0.9",
     "vue-fullscreen": "^2.1.5",
     "vue-i18n": "^8.14.0",
+    "vue-infinite-slide-bar": "^1.1.1",
     "vue-notification": "^1.3.16",
     "vue-paginate": "^3.6.0",
     "vue-perfect-scrollbar": "^0.2.0",
