--- a/assets/package.json
+++ b/assets/package.json
@@ -14,7 +14,7 @@
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
-    "bootstrap-vue": "^2.4.0",
+    "bootstrap-vue": "^2.6.1",
     "britecharts": "^2.13.2",
     "chart.js": "^2.9.3",
     "chartjs-plugin-crosshair": "^1.1.4",
@@ -83,7 +83,9 @@
     "vuejs-datepicker": "^1.6.2",
     "vuelidate": "^0.7.4",
     "vuex": "^3.1.2",
+    "vue-marquee-text-component": "^1.1.1",
     "weather-icons": "^1.3.2"
+
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
